--- a/client/src/views/view_selected.css
+++ b/client/src/views/view_selected.css
@@ -55,14 +55,13 @@
     margin-top: auto; /* Align the button to the bottom */
   }
   
-  h1 {
-    margin-left: 100px;
+  h1.with-margin2 {
+    /* margin-left: 100px; */
+    text-align: center;
     /* Adjust the value as needed */
   }
 
-  .left-margin {
-    margin-left: 80px; /* Adjust the value as per your requirement */
-  }
+ 
 
   p {
     margin-left: 100px;
