--- a/client/src/views/apply.css
+++ b/client/src/views/apply.css
@@ -32,17 +32,21 @@
   }
   
   .form-label2 {
+    display: block;
     font-family: 'Gilroy-SemiBold', sans-serif;
     font-size: 24px;
+    text-align: left;
   }
   
   .form-control2 {
-    width: 80%;
+    display: block;
+    width: 100%;
     height: 300px;
     padding: 20px; /* Adjust padding for form fields */
     background: #E7EEF3;
     border-radius: 24px;
     border: none;
+    align-items: center;
   }
   
  
