--- a/client/src/views/styles.css
+++ b/client/src/views/styles.css
@@ -26,7 +26,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   flex-direction: column;
   align-items:left;
-  padding: 80px;/*padding of whole form*/
+  padding: 7%;/*padding of whole form*/
   margin-left: 200px; /* Add padding to the whole form */
 }
 
