--- a/client/src/views/nav.css
+++ b/client/src/views/nav.css
@@ -4,7 +4,7 @@
     position: fixed;
     z-index: 999;
     width: 100%;
-    font-family: 'Clash Display Variable';
+    font-family: 'ClashDisplay-Variable';
     font-size: medium;
     padding-left: 10vw; /* Example value, adjust as needed */
     padding-right: 10vw; /* Example value, adjust as needed */
@@ -12,7 +12,7 @@
 
 
 .navbar-brand {
-    font-family: 'Space Quest', sans-serif;
+    font-family: 'SpaceQuest', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 36px;
