--- a/client/src/views/myprojects.css
+++ b/client/src/views/myprojects.css
@@ -4,6 +4,7 @@
   margin-bottom: 8px; /* Add margin bottom for spacing between label and input */
   margin-left: 10px;
 }
+
 .apply-form3 {
   display: flex;
   flex-direction: column;
@@ -61,6 +62,7 @@
   margin-bottom: 2rem; /* Adjust bottom margin as needed */
   box-sizing: border-box; /* Ensure padding is included in width calculation */
 }
+
 p {
   margin: 1rem 0;
   line-height: 1.4em; /* Adjust the line height as needed */
@@ -104,4 +106,27 @@ p {
   color: #21003a;
   width: 100%; /* Make the content take up full width of the project item */
   box-sizing: border-box; /* Ensure padding is included in width calculation */
+}
+
+/* Media query for mobile devices */
+@media (max-width: 767px) {
+  /* Adjust padding for .apply-form3 */
+  .apply-form3 {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 50px;
+  }
+  
+  /* Adjust font size and padding for form labels */
+  .form-label3 {
+    font-size: 14px;
+    margin-left: 5px;
+  }
+
+  /* Adjust form field styles */
+  .form-control3 {
+    padding: 10px;
+    font-size: 14px;
+    height: 35px;
+  }
 }
