--- a/client/src/views/nav.css
+++ b/client/src/views/nav.css
@@ -1,3 +1,12 @@
+/* Adjustments for smaller screens */
+@media (max-width: 991.98px) {
+    #navbar {
+        padding-left: 5vw; /* Adjust padding for smaller screens */
+        padding-right: 5vw; /* Adjust padding for smaller screens */
+    }
+}
+
+/* Base styles for both desktop and mobile */
 #navbar {
     background: #130525;
     text-align: center;
@@ -9,7 +18,6 @@
     padding-left: 10vw; /* Example value, adjust as needed */
     padding-right: 10vw; /* Example value, adjust as needed */
 }
-
 
 .navbar-brand {
     font-family: 'Space Quest', sans-serif;
